<resources>
    <string name="app_name">Vegan Life</string>

    <!-- All -->
    <string name="all_nickname">닉네임</string>
    <string name="all_nickname_hint">닉네임(2자 이상 10자 이하)</string>
    <string name="all_nickname_fail">이미 사용하고 있는 닉네임 입니다</string>

    <string name="all_height">키 (cm)</string>
    <string name="all_height_hint">키를 입력해주세요</string>
    <string name="all_number_type_error">숫자만 입력해주세요</string>
    <string name="all_weight">몸무게 (kg)</string>
    <string name="all_weight_hint">몸무게를 입력해주세요</string>
    <string name="all_age">출생연도</string>
    <string name="all_age_hint">출생연도를 입력해주세요</string>
    <string name="all_sex">성별</string>
    <string name="all_male">남자</string>
    <string name="all_female">여자</string>
    <string name="all_sex_error">성별을 선택해주세요</string>

    <string name="all_rest_kcal">오늘의 잔여 칼로리는</string>
    <string name="all_over_rest_kcal">오늘의 초과 칼로리는</string>
    <string name="all_rest_kcal_is">입니다</string>
    <string name="all_carbohydrate">탄수화물</string>
    <string name="all_protein">단백질</string>
    <string name="all_fat">지방</string>

    <string name="all_upload_photo">사진 업로드</string>

    <string name="all_dialog_cancel">취소</string>
    <string name="all_dialog_confirm">확인</string>

    <string name="all_button_modify">수정하기</string>

    <string name="all_vegan">비건</string>
    <string name="all_lacto">락토</string>
    <string name="all_ovo">오보</string>
    <string name="all_lacto_ovo">락토오보</string>
    <string name="all_pesco">페스코</string>

    <string name="all_kcal">kcal</string>

    <string name="all_count_rest_carbohydrate">0g</string>
    <string name="all_count_total_carbohydrate">/0g</string>
    <string name="all_count_rest_protein">0g</string>
    <string name="all_count_total_protein">/0g</string>
    <string name="all_count_rest_fat">0g</string>
    <string name="all_count_total_fat">/0g</string>

    <string name="all_count_photo">(0/5)</string>

    <string name="all_total_capacity_hint">총 내용량을 입력해주세요</string>

    <string name="all_button_feed_upload">업로드</string>

    <string name="all_day_time">0000-00-00 오후 00:00</string>

    <string name="all_recipe_name">비건탕수육</string>

    <!-- Signup -->
    <string name="signup_toolbar_title_vegan_type">채식타입 선택</string>

    <string name="signup_vegan_eng">Vegan</string>
    <string name="signup_lacto_eng">Lacto</string>
    <string name="signup_ovo_eng">Ovo</string>
    <string name="signup_lacto_ovo_eng">Lacto Ovo</string>
    <string name="signup_pesco_eng">Pesco</string>

    <string name="signup_description">지향하는 채식타입을\n선택해주세요</string>

    <string name="signup_vegan_description">동물성 제품 및 부산물을 모두 배제한 식단\n</string>
    <string name="signup_lacto_description">유제품을 섭취하는데, 고기는 포함하지 않는 식단</string>
    <string name="signup_ovo_description">난류를 섭취하는데, 유제품과 고기는 포함하지 않는 식단</string>
    <string name="signup_lacto_ovo_description">유제품과 난류는 섭취하나, 고기는 배제한 식단</string>
    <string name="signup_pesco_description">어류를 포함하여 유제품과 난류는 섭취하나, 기타 고기는 배제한 식단</string>

    <string name="signup_toolbar_title_additional">추가정보 입력</string>
    <string name="signup_nickname_success">사용가능한 닉네임입니다.</string>

    <string name="signup_next">다음</string>
    <string name="signup_complete">완료</string>
    <string name="signup_complete_description_first">환영합니다</string>
    <string name="signup_complete_description_second">회원가입이 완료되었습니다</string>

    <!-- Home -->
    <string name="home">홈</string>
    <string name="home_nickname">닉네임,</string>
    <string name="home_welcome">오늘도 건강한 채식하세요!</string>
    <string name="home_for_recipe">님을 위한</string>
    <string name="home_recommend_recipe">\t추천 레시피</string>
    <string name="home_recipe_empty">등록된 레시피가 없습니다.</string>
    <string name="home_notice">매일밤 자정 님을 위한 추천 레시피가 업데이트 됩니다</string>

    <!-- Alarm -->
    <string name="alarm_toolbar_title">알림</string>
    <string name="alarm_comment">님이 님의 피드에 댓글을 달았습니다!</string>
    <string name="alarm_recipe">님을 위한 오늘의 추천 레시피가\n업데이트 되었습니다!</string>
    <string name="alarm_like_comments">님이 님의 댓글에\n 좋아요를 눌렀습니다!</string>
    <string name="alarm_over_kcal">오늘의 칼로리 섭취량을\n 초과했습니다</string>
    <string name="alarm_day">2023-12-31</string>
    <string name="alarm_time">오후12:30</string>

    <!-- Community -->
    <string name="community">커뮤니티</string>
    <string name="community_toolbar_title">피드</string>
    <string name="community_tag_all">#전체</string>
    <string name="community_tag_worry">#고민있어요</string>
    <string name="community_tag_together">#챌린지 같이해요</string>
    <string name="community_tag_recipe">#채식레시피</string>
    <string name="community_tag_all_txt">전체</string>
    <string name="community_tag_worry_txt">고민있어요</string>
    <string name="community_tag_together_txt">챌린지 같이해요</string>
    <string name="community_tag_recipe_txt">채식레시피</string>
    <string name="community_new_feed">Vegan LIFE의\n첫 피드를 작성해주세요</string>
    <string name="community_button_write">글쓰기</string>
    <string name="community_button_write_feed">피드 작성</string>
    <string name="community_button_write_recipe">레시피 작성</string>

    <string name="community_search_tag_famous">인기 태그</string>
    <string name="community_search_word">검색어를 입력해주세요</string>

    <string name="community_feed_toolbar_title_create">피드 작성</string>
    <string name="community_feed_keyword">키워드</string>
    <string name="community_feed_title_hint">제목을 입력하세요</string>
    <string name="community_feed_content_hint">내용을 입력하세요</string>

    <string name="community_dialog_upload_title">피드 업로드</string>
    <string name="community_dialog_upload_content">작성한 피드를 업로드합니다</string>

    <string name="community_popup_upload">피드가 업로드 되었습니다</string>

    <string name="community_feed_toolbar_title_daily">일상</string>
    <string name="community_popup_like_comment">댓글에 좋아요를 눌렀습니다</string>
    <string name="community_popup_like_feed">피드에 좋아요를 눌렀습니다</string>

    <string name="community_dialog_delete_title">피드 삭제</string>
    <string name="community_dialog_delete_content">정말로 삭제하시겠습니까?</string>
    <string name="community_popup_delete">피드가 삭제되었습니다</string>

    <string name="community_modify_feed">피드 수정</string>

    <string name="community_dialog_modify_content">정말로 수정하시겠습니까?</string>
    <string name="community_popup_modify">피드가 수정 되었습니다</string>

    <!-- Life Check -->
    <string name="lifecheck_toolbar_title">라이프체크</string>
    <string name="lifecheck_monday">월요일</string>
    <string name="lifecheck_tuesday">화요일 </string>
    <string name="lifecheck_wednesday">수요일</string>
    <string name="lifecheck_thursday">목요일</string>
    <string name="lifecheck_friday">금요일</string>
    <string name="lifecheck_saturday">토요일</string>
    <string name="lifecheck_sunday">일요일</string>

    <string name="lifecheck_day">일</string>
    <string name="lifecheck_week">주</string>
    <string name="lifecheck_month">월</string>
    <string name="lifecheck_year">년</string>

    <string name="lifecheck_morning">아침</string>
    <string name="lifecheck_noon">점심</string>
    <string name="lifecheck_evening">저녁</string>
    <string name="lifecheck_snack">간식</string>

    <string name="lifecheck_daily_average">일 평균</string>
    <string name="lifecheck_button_add_meal">식사추가</string>

    <string name="lifecheck_type_meal">식사 종류</string>
    <string name="lifecheck_breakfast">아침 식사</string>
    <string name="lifecheck_lunch">점심 식사</string>
    <string name="lifecheck_dinner">저녁 식사</string>
    <string name="lifecheck_morning_snack">오전 간식</string>
    <string name="lifecheck_afternoon_snack">오후 간식</string>
    <string name="lifecheck_dinner_snack">저녁 간식</string>

    <string name="lifecheck_all">전체</string>
    <string name="lifecheck_registered_menu">내가 등록한 메뉴</string>
    <string name="lifecheck_register_menu">메뉴 등록</string>

    <string name="lifecheck_intake_setting_toolbar_title">섭취량 설정</string>
    <string name="lifecheck_kcal">칼로리</string>
    <string name="lifecheck_add_diet">식사 추가하기</string>
    <string name="lifecheck_total_kcal">총 칼로리</string>
    <string name="lifecheck_input_meal">식사입력</string>

    <string name="lifecheck_dialog_input">입력</string>

    <string name="lifecheck_popup_content">식단이 입력되었습니다</string>

    <string name="lifecheck_food">음식</string>
    <string name="lifecheck_button_delete">삭제하기</string>

    <string name="lifecheck_input_toolbar_title">메뉴 등록</string>
    <string name="lifecheck_menu_name">메뉴명</string>
    <string name="lifecheck_menu_name_hint">메뉴 이름을 입력해주세요</string>
    <string name="lifecheck_total_capacity">총 내용량</string>
    <string name="lifecheck_ingredients">영양성분</string>
    <string name="lifecheck_reference_quantity">기준량</string>
    <string name="lifecheck_intake_amount">섭취량</string>

    <string name="lifecheck_menu_modify_toolbar_title">메뉴 수정</string>
    <string name="lifecheck_menu_delete">메뉴 삭제</string>
    <string name="lifecheck_meal_log_delete">식사 기록 삭제</string>
    <string name="lifecheck_dialog_menu_modify_content">메뉴를 수정하시겠습니까?</string>
    <string name="lifecheck_dialog_menu_delete_content">메뉴를 삭제하시겠습니까?</string>
    <string name="lifecheck_dialog_mealLog_delete_content">식사 기록을 삭제하시겠습니까?</string>

    <!-- mypage -->
    <string name="mypage_toolbar_title">마이페이지</string>
    <string name="mypage_email">veganlife@naver.com</string>
    <string name="mypage_modify_information">회원 정보 수정</string>
    <string name="mypage_posted_feed">내가 쓴 피드</string>
    <string name="mypage_wroted_comments">내가 쓴 댓글</string>
    <string name="mypage_wroted_recipe">내가 쓴 레시피</string>
    <string name="mypage_picked_recipe">찜한 레시피</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdrawal_membership">회원탈퇴</string>

    <string name="mypage_id">ID</string>
    <string name="mypage_profile_select">프로필 사진 선택</string>
    <string name="mypage_profile_delete">프로필 사진 삭제</string>
    <string name="mypage_vegan_type">채식타입</string>
    <string name="mypage_button_modify">수정</string>
    <string name="mypage_popup_modify_content">수정되었습니다</string>
    <string name="mypage_dialog_logout_content">정말로 로그아웃 하시겠습니까?</string>
    <string name="mypage_popup_logout_content">로그아웃이 완료되었습니다</string>
    <string name="mypage_dialog_withdrawal_content">정말로 회원탈퇴 하시겠습니까?</string>
    <string name="mypage_popup_withdrawal_content">회원탈퇴가 완료되었습니다</string>

    <string name="mypage_picked_recipe_list">레시피 스크랩 목록</string>

    <string name="mypage_completed_withdrawal_text">Vegan Life를 탈퇴했어요</string>

    <!-- Recipe -->
    <string name="recipe_recipe">레시피</string>

    <string name="recipe_all">전체</string>

    <string name="recipe_empty_feed">Vegan LIFE의\n첫 레시피를 작성해주세요</string>
    <string name="recipe_empty_search">검색어를 입력해주세요</string>

    <string name="recipe_button_recipe">레시피 작성</string>

    <string name="recipe_toolbar_title_recipe_search">레시피 검색</string>

    <string name="recipe_dialog_delete_title">레시피 삭제</string>
    <string name="recipe_dialog_delete_content">정말로 삭제하시겠습니까?</string>

    <string name="recipe_button_modify">수정</string>
    <string name="recipe_button_delete">삭제</string>
    <string name="recipe_able_vegan_type">섭취 가능한 채식 타입</string>
    <string name="recipe_ingredients">재료</string>
    <string name="recipe_ingredients_for_one">(1인분 기준)</string>

    <string name="recipe_able_vegan_type_hint">2개까지 선택 가능</string>
    <string name="recipe_input_name_hint">레시피 이름을 입력해주세요</string>
    <string name="recipe_input_measure">단위</string>
    <string name="recipe_input_ingredient_hint">재료를 입력해주세요</string>
    <string name="recipe_input_recipe_hint">레시피를 입력해주세요</string>
    <string name="recipe_popup_content">레시피를 찜했습니다\n찜한 레시피는 <B>마이페이지 > 찜한 레시피</B>\n에서 확인할 수 있습니다</string>
    <string name="recipe_popup_content_delete">레시피가 삭제되었습니다</string>

</resources>